compose issue